--- a/index.html
+++ b/index.html
@@ -2,4 +2,10 @@
 
 <!-- Hey Coding School! After you've forked this repository, delete all the code below this line. -->
 
-<style> </style>
+<style> Every year, nearly four million cats are eaten in Asia.h
+On average, cats spend 2/3 of every day sleeping. That means a nine-year-old cat has been awake for only three years of its life.i
+Unlike dogs, cats do not have a sweet tooth. Scientists believe this is due to a mutation in a key taste receptor.d
+When a cat chases its prey, it keeps its head level. Dogs and humans bob their heads up and down.i
+The technical term for a cat’s hairball is a “bezoar.”f
+A group of cats is called a “clowder.”g
+Female cats tend to be right pawed, while male cats are more often left pawed. Interestingly, while 90% of humans are right handed, the remaining 10% of lefties also tend to be male.l i realy don't know this is random to me XD</style>
